@@ -208,19 +208,25 @@ if ($this->data['new_service_time']['type'] == SERVICE_TIME_TYPE_ONETIME_DOWNTIM
 	$serviceTimeTable->addRow($timeCalendarTable);
 }
 else {
-	$weekFromComboBox = new CComboBox('new_service_time[from_week]', !empty($ZBX_MESSAGES) ? $_REQUEST['new_service_time']['from_week'] : 'Sunday');
-	$weekToComboBox = new CComboBox('new_service_time[to_week]', !empty($ZBX_MESSAGES) ? $_REQUEST['new_service_time']['to_week'] : 'Sunday');
+	$weekFromComboBox = new CComboBox('new_service_time[from_week]', isset($_REQUEST['new_service_time']['from_week'])
+			? $_REQUEST['new_service_time']['from_week'] : 0);
+	$weekToComboBox = new CComboBox('new_service_time[to_week]', isset($_REQUEST['new_service_time']['from_week'])
+			? $_REQUEST['new_service_time']['to_week'] : 0);
 	for ($dow = 0; $dow < 7; $dow++) {
 		$weekFromComboBox->addItem($dow, getDayOfWeekCaption($dow));
 		$weekToComboBox->addItem($dow, getDayOfWeekCaption($dow));
 	}
-	$timeFromHourTextBox = new CTextBox('new_service_time[from_hour]', !empty($ZBX_MESSAGES) ? $_REQUEST['new_service_time']['from_hour'] : '', 2, 'no', 2);
+	$timeFromHourTextBox = new CTextBox('new_service_time[from_hour]', isset($_REQUEST['new_service_time']['from_hour'])
+			? $_REQUEST['new_service_time']['from_hour'] : '', 2, 'no', 2);
 	$timeFromHourTextBox->setAttribute('placeholder', _('hh'));
-	$timeFromMinuteTextBox = new CTextBox('new_service_time[from_minute]', !empty($ZBX_MESSAGES) ? $_REQUEST['new_service_time']['from_minute'] : '', 2, 'no', 2);
+	$timeFromMinuteTextBox = new CTextBox('new_service_time[from_minute]', isset($_REQUEST['new_service_time']['from_minute'])
+			? $_REQUEST['new_service_time']['from_minute'] : '', 2, 'no', 2);
 	$timeFromMinuteTextBox->setAttribute('placeholder', _('mm'));
-	$timeToHourTextBox = new CTextBox('new_service_time[to_hour]', !empty($ZBX_MESSAGES) ? $_REQUEST['new_service_time']['to_hour'] : '', 2, 'no', 2);
+	$timeToHourTextBox = new CTextBox('new_service_time[to_hour]', isset($_REQUEST['new_service_time']['to_hour'])
+			? $_REQUEST['new_service_time']['to_hour'] : '', 2, 'no', 2);
 	$timeToHourTextBox->setAttribute('placeholder', _('hh'));
-	$timeToMinuteTextBox = new CTextBox('new_service_time[to_minute]', !empty($ZBX_MESSAGES) ? $_REQUEST['new_service_time']['to_minute'] : '', 2, 'no', 2);
+	$timeToMinuteTextBox = new CTextBox('new_service_time[to_minute]', isset($_REQUEST['new_service_time']['to_minute'])
+			? $_REQUEST['new_service_time']['to_minute'] : '', 2, 'no', 2);
 	$timeToMinuteTextBox->setAttribute('placeholder', _('mm'));
 
 	$serviceTimeTable->addRow(array(_('From'), $weekFromComboBox, new CCol(array(_('Time'), SPACE, $timeFromHourTextBox, ' : ', $timeFromMinuteTextBox))));
