@@ -110,6 +110,9 @@ if (isset($_REQUEST['form'])) {
 		show_messages($result, _('Service deleted'), _('Cannot delete service'));
 		add_audit_if($result, AUDIT_ACTION_DELETE, AUDIT_RESOURCE_IT_SERVICE, 'Name ['.$service['name'].'] id ['.$service['serviceid'].']');
 		unset($service);
+		if ($result) {
+			unset($_REQUEST['form']);
+		}
 	}
 	// save
 	elseif (isset($_REQUEST['save_service'])) {
@@ -155,9 +158,65 @@ if (isset($_REQUEST['form'])) {
 		}
 
 		add_audit_if($result, $audit_acrion, AUDIT_RESOURCE_IT_SERVICE, ' Name ['.$_REQUEST['name'].'] id ['.$serviceid.']');
+		if ($result) {
+			unset($_REQUEST['form']);
+		}
 	}
-	if ($result) {
-		unset($_REQUEST['form']);
+	// validate and get service times
+	elseif (isset($_REQUEST['add_service_time']) && isset($_REQUEST['new_service_time'])) {
+		$_REQUEST['service_times'] = get_request('service_times', array());
+		$new_service_time['type'] = $_REQUEST['new_service_time']['type'];
+
+		if ($_REQUEST['new_service_time']['type'] == SERVICE_TIME_TYPE_ONETIME_DOWNTIME) {
+			$new_service_time['from'] = zbxDateToTime($_REQUEST['new_service_time']['from']);
+			$new_service_time['to'] = zbxDateToTime($_REQUEST['new_service_time']['to']);
+			$new_service_time['note'] = $_REQUEST['new_service_time']['note'];
+		}
+		else {
+			$new_service_time['from'] = dowHrMinToSec($_REQUEST['new_service_time']['from_week'], $_REQUEST['new_service_time']['from_hour'], $_REQUEST['new_service_time']['from_minute']);
+			$new_service_time['to'] = dowHrMinToSec($_REQUEST['new_service_time']['to_week'], $_REQUEST['new_service_time']['to_hour'], $_REQUEST['new_service_time']['to_minute']);
+			$new_service_time['note'] = $_REQUEST['new_service_time']['note'];
+		}
+
+		// validating service times that were entered, time 'from' has a wrong format
+		if ($new_service_time['from'] === false) {
+			if (!isset($_REQUEST['new_service_time']['from'])) {
+				$_REQUEST['new_service_time']['from'] = $_REQUEST['new_service_time']['from_hour'].':'.$_REQUEST['new_service_time']['from_minute'];
+			}
+			error(_('Error adding service time. Should be from 00:00 to 24:00.'));
+		}
+		// validate time 'to' has a wrong format
+		elseif ($new_service_time['to'] === false) {
+			if (!isset($_REQUEST['new_service_time']['to'])) {
+				$_REQUEST['new_service_time']['to'] = $_REQUEST['new_service_time']['to_hour'].':'.$_REQUEST['new_service_time']['to_minute'];
+			}
+			error(_('Error adding service time. Should be from 00:00 to 24:00.'));
+		}
+		// validate time 'from' is bigger than time 'to'
+		elseif ($new_service_time['from'] > $new_service_time['to']) {
+			error(_('Service time "from" cannot be bigger than time "to".'));
+		}
+		// if this time is not already there, adding it for insertation
+		elseif (!str_in_array($_REQUEST['service_times'], $new_service_time)) {
+			array_push($_REQUEST['service_times'], $new_service_time);
+
+			unset($_REQUEST['new_service_time']['from_week']);
+			unset($_REQUEST['new_service_time']['to_week']);
+			unset($_REQUEST['new_service_time']['from_hour']);
+			unset($_REQUEST['new_service_time']['to_hour']);
+			unset($_REQUEST['new_service_time']['from_minute']);
+			unset($_REQUEST['new_service_time']['to_minute']);
+		}
+
+		show_messages();
+	}
+	else {
+		unset($_REQUEST['new_service_time']['from_week']);
+		unset($_REQUEST['new_service_time']['to_week']);
+		unset($_REQUEST['new_service_time']['from_hour']);
+		unset($_REQUEST['new_service_time']['to_hour']);
+		unset($_REQUEST['new_service_time']['from_minute']);
+		unset($_REQUEST['new_service_time']['to_minute']);
 	}
 }
 
@@ -249,45 +308,6 @@ if (isset($_REQUEST['form'])) {
 	$data['form_refresh'] = get_request('form_refresh', 0);
 	$data['service'] = !empty($service) ? $service : null;
 
-	// validate and get service times
-	if (isset($_REQUEST['add_service_time']) && isset($_REQUEST['new_service_time'])) {
-		$_REQUEST['service_times'] = get_request('service_times', array());
-		$new_service_time['type'] = $_REQUEST['new_service_time']['type'];
-
-		if ($_REQUEST['new_service_time']['type'] == SERVICE_TIME_TYPE_ONETIME_DOWNTIME) {
-			$new_service_time['from'] = zbxDateToTime($_REQUEST['new_service_time']['from']);
-			$new_service_time['to'] = zbxDateToTime($_REQUEST['new_service_time']['to']);
-			$new_service_time['note'] = $_REQUEST['new_service_time']['note'];
-		}
-		else {
-			$new_service_time['from'] = dowHrMinToSec($_REQUEST['new_service_time']['from_week'], $_REQUEST['new_service_time']['from_hour'], $_REQUEST['new_service_time']['from_minute']);
-			$new_service_time['to'] = dowHrMinToSec($_REQUEST['new_service_time']['to_week'], $_REQUEST['new_service_time']['to_hour'], $_REQUEST['new_service_time']['to_minute']);
-			$new_service_time['note'] = $_REQUEST['new_service_time']['note'];
-		}
-
-		// validating service times that were entered, time 'from' has a wrong format
-		if ($new_service_time['from'] === false) {
-			if (!isset($_REQUEST['new_service_time']['from'])) {
-				$_REQUEST['new_service_time']['from'] = $_REQUEST['new_service_time']['from_hour'].':'.$_REQUEST['new_service_time']['from_minute'];
-			}
-			error(_s('Error adding service time "%s". Should be from 00:00 to 24:00.', $_REQUEST['new_service_time']['from']));
-		}
-		// validate time 'to' has a wrong format
-		elseif ($new_service_time['to'] === false) {
-			if (!isset($_REQUEST['new_service_time']['to'])) {
-				$_REQUEST['new_service_time']['to'] = $_REQUEST['new_service_time']['to_hour'].':'.$_REQUEST['new_service_time']['to_minute'];
-			}
-			error(_s('Error adding service time "%s". Should be from 00:00 to 24:00.', $_REQUEST['new_service_time']['to']));
-		}
-		// validate time 'from' is bigger than time 'to'
-		elseif ($new_service_time['from'] > $new_service_time['to']) {
-			error(_('Servie time from cannot be bigger than time to.'));
-		}
-		// if this time is not already there, adding it for insertation
-		elseif (!str_in_array($_REQUEST['service_times'], $new_service_time)) {
-			array_push($_REQUEST['service_times'], $new_service_time);
-		}
-	}
 	$data['service_times'] = get_request('service_times', array());
 	$data['new_service_time'] = get_request('new_service_time', array('type' => SERVICE_TIME_TYPE_UPTIME));
 
